--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,11 @@
         android:theme="@style/Theme.AttendanceApplication"
         tools:targetApi="31">
         <activity
+            android:name=".AddRole"
+            android:exported="false" />
+        <activity
             android:name=".SecondActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
