--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,13 @@
         android:theme="@style/Theme.AttendanceApplication"
         tools:targetApi="31">
         <activity
-            android:name=".AddRole"
+            android:name=".Activities.AddRole"
             android:exported="false" />
         <activity
-            android:name=".SecondActivity"
+            android:name=".Activities.ForgotPasswordActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".Activities.SecondActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
