--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -15,11 +16,13 @@
         android:theme="@style/Theme.AttendanceApplication"
         tools:targetApi="31">
         <activity
-            android:name=".Activities.AddRole"
-            android:exported="false" />
+            android:name=".Activities.ResetPasswordActivity"
+            android:exported="false"
+            android:label="@string/title_activity_reset_password"
+            android:theme="@style/Theme.AttendanceApplication" />
         <activity
             android:name=".Activities.ForgotPasswordActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".Activities.SecondActivity"
             android:exported="false" />
