--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.AttendanceApplication"
         tools:targetApi="31">
         <activity
+            android:name=".Dashboard"
+            android:exported="false" />
+        <activity
+            android:name=".ListMembers"
+            android:exported="false" />
+        <activity
             android:name=".Activities.ResetPasswordActivity"
             android:exported="false"
             android:label="@string/title_activity_reset_password"
