--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+<!--    crop imgage activity -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,19 +28,24 @@
         tools:targetApi="31">
         <activity
             android:name=".Activities.ScheduleActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Schedule"/>
         <activity
             android:name=".Activities.DashboardActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Dashboard"/>
         <activity
             android:name=".Activities.ListMembersActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Members List"/>
         <activity
             android:name=".Activities.ResetPasswordActivity"
-            android:exported="false"/>
+            android:exported="false"
+            android:label="Reset Password"/>
         <activity
             android:name=".Activities.ForgotPasswordActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="Forgot Password"/>
         <activity
             android:name=".Activities.SecondActivity"
             android:exported="false" />
@@ -42,6 +58,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".MyFirebaseMessagingService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <!-- Set custom default icon. This is used when no icon is set for incoming notification messages.
+     See README(https://goo.gl/l4GJaQ) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_launcher" />
+        <!-- Set color used with incoming notification messages. This is used when no color is set for the incoming
+             notification message. See README(https://goo.gl/6BKBk7) for more. -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/teal" />
     </application>
 
 </manifest>
